// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSignatureSuccessful should handle empty wallet and transation props 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Transaction Created
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-signed-banner-dark-green.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      Your transaction has been created successfully. Participants can now sign the transaction to broadcast it to the network. The following is relevant information for your transaction:
    </p>
    <div>
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`MultiSignatureSuccessful should render 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Transaction Created
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-signed-banner-dark-green.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      Your transaction has been created successfully. Participants can now sign the transaction to broadcast it to the network. The following is relevant information for your transaction:
    </p>
    <div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            ID
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex-1 flex items-center space-x-3"
            >
              <span
                class="w-20 flex-1"
              >
                <span
                  class="inline-flex overflow-hidden"
                >
                  ea63bf9a4b3eaf75a1dfff721967c45dce64eb7facf1aef29461868681b5c79b
                </span>
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="relative focus:outline-none ring-focus"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="sc-bdnxRM AFVmm"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionSuccessful__musig-address"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            <div
              class="flex items-center space-x-2"
            >
              <span>
                Multisignature Address
              </span>
               
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  multisignature.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex flex-grow text-theme-primary-300 dark:text-theme-secondary-600 space-x-2 items-center"
            >
              <div>
                <div
                  class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                >
                  <span
                    class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                    data-testid="Address__address"
                  >
                    DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH
                  </span>
                </div>
              </div>
              <button
                class="relative focus:outline-none ring-focus"
                data-ring-focus-margin="-m-1"
                data-testid="clipboard-icon__wrapper"
                type="button"
              >
                <div
                  class="sc-bdnxRM AFVmm"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
            >
              <img
                alt="DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                title="DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionNetwork"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Cryptoasset
          </div>
          <div
            class="flex items-center font-semibold"
          >
            ARK Devnet
          </div>
        </div>
        <div
          aria-label="ARK Devnet"
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="sc-bdnxRM NjstW"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionSender"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Sender
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex items-center -space-x-1"
        >
          <div
            class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
            >
              <img
                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 gxyXCF no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Multisignature Participants
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 bCfwoA"
            >
              <div
                class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                      role="row"
                    >
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Avatar
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Address
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td>
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td>
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                              title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Minimum Required Signatures
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div>
              <span>
                2 
              </span>
              <span
                class="text-theme-secondary-700"
                data-testid="MultiSignatureSuccessful__publicKeys"
              >
                out of 2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionType"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Transaction Type
          </div>
          <div
            class="flex items-center font-semibold"
          >
            Transfer
          </div>
        </div>
        <div
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-text border-theme-text dark:text-theme-secondary-600 dark:border-theme-secondary-600 ring-theme-background"
        >
          <div
            class="sc-bdnxRM NjstW"
            height="20"
            width="20"
          >
            <svg>
              transfer.svg
            </svg>
          </div>
        </div>
      </div>
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`MultiSignatureSuccessful should render with delegate sender wallet 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Transaction Created
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-signed-banner-dark-green.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      Your transaction has been created successfully. Participants can now sign the transaction to broadcast it to the network. The following is relevant information for your transaction:
    </p>
    <div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            ID
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex-1 flex items-center space-x-3"
            >
              <span
                class="w-20 flex-1"
              >
                <span
                  class="inline-flex overflow-hidden"
                >
                  ea63bf9a4b3eaf75a1dfff721967c45dce64eb7facf1aef29461868681b5c79b
                </span>
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="relative focus:outline-none ring-focus"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="sc-bdnxRM AFVmm"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionSuccessful__musig-address"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            <div
              class="flex items-center space-x-2"
            >
              <span>
                Multisignature Address
              </span>
               
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  multisignature.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex flex-grow text-theme-primary-300 dark:text-theme-secondary-600 space-x-2 items-center"
            >
              <div>
                <div
                  class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                >
                  <span
                    class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                    data-testid="Address__address"
                  >
                    DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH
                  </span>
                </div>
              </div>
              <button
                class="relative focus:outline-none ring-focus"
                data-ring-focus-margin="-m-1"
                data-testid="clipboard-icon__wrapper"
                type="button"
              >
                <div
                  class="sc-bdnxRM AFVmm"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
            >
              <img
                alt="DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                title="DNzn2Rg6jCg3RCZnUyYjhbhvAgSWGwaMbH"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionNetwork"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Cryptoasset
          </div>
          <div
            class="flex items-center font-semibold"
          >
            ARK Devnet
          </div>
        </div>
        <div
          aria-label="ARK Devnet"
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="sc-bdnxRM NjstW"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionSender"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Sender
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex items-center -space-x-1"
        >
          <div
            class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
            >
              <img
                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 gxyXCF no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Multisignature Participants
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 bCfwoA"
            >
              <div
                class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                      role="row"
                    >
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Avatar
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Address
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td>
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td>
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                              title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Minimum Required Signatures
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div>
              <span>
                2 
              </span>
              <span
                class="text-theme-secondary-700"
                data-testid="MultiSignatureSuccessful__publicKeys"
              >
                out of 2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionType"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Transaction Type
          </div>
          <div
            class="flex items-center font-semibold"
          >
            Transfer
          </div>
        </div>
        <div
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-text border-theme-text dark:text-theme-secondary-600 dark:border-theme-secondary-600 ring-theme-background"
        >
          <div
            class="sc-bdnxRM NjstW"
            height="20"
            width="20"
          >
            <svg>
              transfer.svg
            </svg>
          </div>
        </div>
      </div>
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`MultiSignatureSuccessful should render with ledger sender wallet 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Transaction Created
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-signed-banner-dark-green.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      Your transaction has been created successfully. Participants can now sign the transaction to broadcast it to the network. The following is relevant information for your transaction:
    </p>
    <div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            ID
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex-1 flex items-center space-x-3"
            >
              <span
                class="w-20 flex-1"
              >
                <span
                  class="inline-flex overflow-hidden"
                >
                  ea63bf9a4b3eaf75a1dfff721967c45dce64eb7facf1aef29461868681b5c79b
                </span>
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="relative focus:outline-none ring-focus"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="sc-bdnxRM AFVmm"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionNetwork"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Cryptoasset
          </div>
          <div
            class="flex items-center font-semibold"
          >
            ARK Devnet
          </div>
        </div>
        <div
          aria-label="ARK Devnet"
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="sc-bdnxRM NjstW"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionSender"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Sender
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            />
          </div>
        </div>
        <div
          class="flex items-center -space-x-1"
        >
          <div
            class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
            />
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 gxyXCF no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Multisignature Participants
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 bCfwoA"
            >
              <div
                class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                      role="row"
                    >
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Avatar
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Address
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td>
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td>
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                              title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Minimum Required Signatures
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div>
              <span>
                2 
              </span>
              <span
                class="text-theme-secondary-700"
                data-testid="MultiSignatureSuccessful__publicKeys"
              >
                out of 2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionType"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Transaction Type
          </div>
          <div
            class="flex items-center font-semibold"
          >
            Transfer
          </div>
        </div>
        <div
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-text border-theme-text dark:text-theme-secondary-600 dark:border-theme-secondary-600 ring-theme-background"
        >
          <div
            class="sc-bdnxRM NjstW"
            height="20"
            width="20"
          >
            <svg>
              transfer.svg
            </svg>
          </div>
        </div>
      </div>
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`MultiSignatureSuccessful should render without generated address 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Transaction Created
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-signed-banner-dark-green.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      Your transaction has been created successfully. Participants can now sign the transaction to broadcast it to the network. The following is relevant information for your transaction:
    </p>
    <div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            ID
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex-1 flex items-center space-x-3"
            >
              <span
                class="w-20 flex-1"
              >
                <span
                  class="inline-flex overflow-hidden"
                >
                  ea63bf9a4b3eaf75a1dfff721967c45dce64eb7facf1aef29461868681b5c79b
                </span>
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="relative focus:outline-none ring-focus"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="sc-bdnxRM AFVmm"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionNetwork"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Cryptoasset
          </div>
          <div
            class="flex items-center font-semibold"
          >
            ARK Devnet
          </div>
        </div>
        <div
          aria-label="ARK Devnet"
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="sc-bdnxRM NjstW"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionSender"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Sender
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex items-center -space-x-1"
        >
          <div
            class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
            >
              <img
                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 gxyXCF no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Multisignature Participants
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div
              class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 bCfwoA"
            >
              <div
                class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                      role="row"
                    >
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Avatar
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top hidden"
                        >
                          <div>
                            Address
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td>
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td>
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                              title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Minimum Required Signatures
          </div>
          <div
            class="flex items-center font-semibold"
          >
            <div>
              <span>
                2 
              </span>
              <span
                class="text-theme-secondary-700"
                data-testid="MultiSignatureSuccessful__publicKeys"
              >
                out of 2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionType"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
          >
            Transaction Type
          </div>
          <div
            class="flex items-center font-semibold"
          >
            Transfer
          </div>
        </div>
        <div
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-text border-theme-text dark:text-theme-secondary-600 dark:border-theme-secondary-600 ring-theme-background"
        >
          <div
            class="sc-bdnxRM NjstW"
            height="20"
            width="20"
          >
            <svg>
              transfer.svg
            </svg>
          </div>
        </div>
      </div>
      <div />
    </div>
  </section>
</DocumentFragment>
`;
